--- a/Layouts/Game1_LO.xml
+++ b/Layouts/Game1_LO.xml
@@ -543,15 +543,16 @@
                                 <enforce-mode>Enforce</enforce-mode>
                             </properties>
                         </behavior-instance>
+                        <behavior-instance type="Pin" />
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>553</x>
-                        <y>-289</y>
+                        <x>568</x>
+                        <y>-239</y>
                         <z>0</z>
-                        <width>758</width>
-                        <height>530</height>
+                        <width>592</width>
+                        <height>412</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -583,11 +584,11 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>430</x>
-                        <y>-277</y>
+                        <x>467.5</x>
+                        <y>-227.337402344</y>
                         <z>0</z>
-                        <width>164</width>
-                        <height>154</height>
+                        <width>121</width>
+                        <height>109</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -619,11 +620,11 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>678</x>
-                        <y>-277</y>
+                        <x>672.5</x>
+                        <y>-225.337402344</y>
                         <z>0</z>
-                        <width>164</width>
-                        <height>154</height>
+                        <width>113</width>
+                        <height>109</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -655,11 +656,11 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>561</x>
-                        <y>-82</y>
+                        <x>560.5</x>
+                        <y>-76.337402344</y>
                         <z>0</z>
-                        <width>356</width>
-                        <height>127</height>
+                        <width>268</width>
+                        <height>93</height>
                         <depth>0</depth>
                         <hotspotX>0.501240671</hotspotX>
                         <hotspotY>0.503496528</hotspotY>
@@ -696,8 +697,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>68.0729599</x>
-                        <y>59.191741943</y>
+                        <x>60</x>
+                        <y>64</y>
                         <z>0</z>
                         <width>51.166351318</width>
                         <height>51.166351318</height>
