--- a/Layouts/bukusakti.xml
+++ b/Layouts/bukusakti.xml
@@ -80,7 +80,7 @@
                         <font>Arial Rounded MT Bold,-21,400,0</font>
                         <color>255,153,0</color>
                         <horizontal-alignment>Left</horizontal-alignment>
-                        <vertical-alignment>Top</vertical-alignment>
+                        <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Top-left</hotspot>
                         <wrapping>Word</wrapping>
                         <line-height>0</line-height>
